DS-201 Fix invisible handler in Safari

--- a/src/sass/_ui-layer.scss
+++ b/src/sass/_ui-layer.scss
@@ -6,38 +6,38 @@
   }
 
   .handler {
-    r: 4;
+    r: 4px;
     fill: #f44336;
   }
-  
+
   .handler-resize-nwse {
     cursor: nwse-resize;
   }
-  
+
   .handler-resize-ns {
     cursor: ns-resize;
   }
-  
+
   .handler-resize-nesw {
     cursor: nesw-resize;
   }
-  
+
   .handler-resize-ew {
     cursor: ew-resize;
   }
-  
+
   .handler-resize-ew {
     cursor: ew-resize;
   }
-  
+
   .handler-resize-nesw {
     cursor: nesw-resize;
   }
-  
+
   .handler-resize-ns {
     cursor: ns-resize;
   }
-  
+
   .handler-resize-nwse {
     cursor: nwse-resize;
   }
